Added grid buttons for AI Prediction and Archives

--- a/Frontend/src/app/archive/archive.component.html
+++ b/Frontend/src/app/archive/archive.component.html
@@ -8,8 +8,8 @@
                 <ol class="breadcrumb justify-content-end">
                     <li class="breadcrumb-item">Pages</li>
                     <li class="breadcrumb-item active">Archives</li>
-                    <li class="breadcrumb-item">{{patientService.selectedPatient?.firstName + ' ' +
-                        patientService.selectedPatient?.lastName}}</li>
+                    <li class="breadcrumb-item">{{patient?.firstName + ' ' +
+                        patient?.lastName}}</li>
                 </ol>
             </div>
         </div>
