--- a/Frontend/src/assets/style.css
+++ b/Frontend/src/assets/style.css
@@ -3450,6 +3450,7 @@ textarea.form-control.is-invalid {
   font-size: 0.875rem;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  text-transform: none;
 }
 
 @media (prefers-reduced-motion: reduce) {
