--- a/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.html
+++ b/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.html
@@ -1,7 +1,11 @@
 <div class="container-fluid">
   <div class="row page-titles">
     <div class="col-12 col-sm-3 col-md-5 align-self-center">
-      <h4 class="text-themecolor">AI Prediction</h4>
+      <div class="d-flex display-flex align-items-center">
+        <button type="button" class="btn btn-info d-lg-block m-r-15 text-white" (click)="goBack()"><i
+            class="fas fa-angle-left"></i>  </button>
+        <h4 class="text-themecolor">AI Prediction</h4>
+      </div>
     </div>
     <div class="col-12 col-sm-9 col-md-7 align-self-center text-end">
       <div class="d-flex display-flex justify-content-end align-items-center">
