--- a/Frontend/src/app/appointment/appointment.component.html
+++ b/Frontend/src/app/appointment/appointment.component.html
@@ -1,22 +1,34 @@
-<div class="modal-header">
-    <h4 class="modal-title"><strong>Book an Appointment for patient
-            {{patientService.selectedPatient?.firstName + ' ' +
-            patientService.selectedPatient?.lastName}}</strong></h4>
-    <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
-</div>
-<div class="modal-body">
-    <div class="form-group">
-        <label for="cp">Select a cardiologist:</label>
-        <select class="form-control" id="cardiologist" name="cardiologist" [(ngModel)]="selected" required>
-            <option *ngFor="let option of this.cardiologists" [value]="option.id">{{ option.firstName + ' '
-                + option.lastName }}
-            </option>
-        </select>
+<div class="container-fluid">
+    <div class="row page-titles">
+        <div class="col-12 col-sm-3 col-md-5 align-self-center">
+            <div class="d-flex display-flex align-items-center">
+                <button type="button" class="btn btn-info d-lg-block m-r-15 text-white" (click)="goBack()"><i
+                        class="fas fa-angle-left"></i> </button>
+                <h4 class="text-themecolor">Book an Appointment</h4>
+            </div>
+        </div>
+        <div class="col-12 col-sm-9 col-md-7 align-self-center text-end">
+            <div class="d-flex display-flex justify-content-end align-items-center">
+                <ol class="breadcrumb justify-content-end">
+                    <li class="breadcrumb-item">Pages</li>
+                    <li class="breadcrumb-item active">Book an Appointment</li>
+                    <li class="breadcrumb-item">{{patient?.firstName + ' ' +
+                        patient?.lastName}}</li>
+                </ol>
+            </div>
+        </div>
     </div>
-    <app-calendar [id]="selected"></app-calendar>
 </div>
-<div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
-        Close
-    </button>
+
+<div class="form-group form-element">
+    <label for="cp">Select a cardiologist:</label>
+    <select class="form-control" id="cardiologist" name="cardiologist" [(ngModel)]="selected" required>
+        <option *ngFor="let option of this.cardiologists" [value]="option.id">{{ option.firstName + ' '
+            + option.lastName }}
+        </option>
+    </select>
+</div>
+
+<div class="calendar-element">
+    <app-calendar [cardiologistId]="selected" [patient]="patient"></app-calendar>
 </div>
