--- a/Frontend/src/app/cardiologist/cardiologist-calendar/cardiologist-calendar.component.html
+++ b/Frontend/src/app/cardiologist/cardiologist-calendar/cardiologist-calendar.component.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="form-group form-element">
-    <label for="cp">Select a patient:</label>
+    <label for="patient">Select a patient:</label>
     <select class="form-control" id="patient" name="patient" (change)="onPatientSelectionChange($event)" required>
         <option *ngFor="let option of this.patients" [value]="option.id">{{ option.firstName + ' '
             + option.lastName }}
@@ -23,4 +23,6 @@
     </select>
 </div>
 
-<app-calendar [id]="userId" class="calendar-element"></app-calendar>
+<div class="calendar-element">
+    <app-calendar [id]="userId" class="calendar-element"></app-calendar>
+</div>
