--- a/Frontend/src/app/cardiologist/cardiologist-calendar/cardiologist-calendar.component.html
+++ b/Frontend/src/app/cardiologist/cardiologist-calendar/cardiologist-calendar.component.html
@@ -24,5 +24,5 @@
 </div>
 
 <div class="calendar-element">
-    <app-calendar [id]="userId" class="calendar-element"></app-calendar>
+    <app-calendar [cardiologistId]="userId" [patient]="selected" class="calendar-element"></app-calendar>
 </div>
