--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -91,7 +91,7 @@
                         <li> <a class="waves-effect waves-dark" href="#" routerLink="home-page"><i
                                     class="fas fa-home"></i><span class="hide-menu">Home
                                     Page</span></a></li>
-                        <li *ngIf="roleType=='Cardiolog'"> <a class="waves-effect waves-dark" href="#" routerLink="calendar"><i
+                        <li *ngIf="isCardiolog()"> <a class="waves-effect waves-dark" href="#" routerLink="calendar"><i
                                     class="fas fa-calendar"></i><span class="hide-menu">Calendar</span></a></li>
                         <li> <a class="waves-effect waves-dark" href="#" routerLink="patients"><i
                                     class="fas fa-heartbeat"></i><span class="hide-menu">Patients</span></a></li>
