--- a/Frontend/src/app/appointment/components/new-appointment/new-appointment.component.html
+++ b/Frontend/src/app/appointment/components/new-appointment/new-appointment.component.html
@@ -53,5 +53,5 @@
     <button *ngIf="isVisibleApprove()" type="button" class="btn btn-success" (click)="openApprove()">
         Approve the Appointment
     </button>
-    <button type="button" class="btn btn-primary" (click)="save()">Save</button>
+    <button type="button" class="btn btn-primary" (click)="saveClicked()">Save</button>
 </div>
