--- a/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.css
+++ b/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.css
@@ -58,3 +58,73 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+/*progressbar*/
+#progressbar {
+    width: 100%;
+    margin-left: 25%;
+    margin-bottom: 30px;
+    overflow: hidden;
+    color: lightgray;
+}
+
+#progressbar .active {
+    color: #000000;
+}
+
+#progressbar #step1:before {
+    text-align: center;
+    font-family: FontAwesome;
+    content: "1";
+}
+
+#progressbar #step2:before {
+    text-align: center;
+    font-family: FontAwesome;
+    content: "2";
+}
+
+#progressbar #step3:before {
+    text-align: center;
+    font-family: FontAwesome;
+    content: "3";
+}
+
+#progressbar li {
+    list-style-type: none;
+    font-size: 12px;
+    width: 25%;
+    float: left;
+    position: relative;
+}
+
+/*ProgressBar before any progress*/
+#progressbar li:before {
+    width: 50px;
+    height: 50px;
+    line-height: 45px;
+    display: block;
+    font-size: 18px;
+    color: #ffffff;
+    background: lightgray;
+    border-radius: 50%;
+    margin: 0 auto 10px auto;
+    padding: 2px;
+}
+
+/*ProgressBar connectors*/
+#progressbar li:after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: lightgray;
+    position: absolute;
+    left: 0;
+    top: 25px;
+    z-index: -1;
+}
+
+/*Color number of the step and the connector before it*/
+#progressbar li.active:before, #progressbar li.active:after {
+    background: skyblue;
+}
