--- a/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.html
+++ b/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.html
@@ -22,8 +22,20 @@
   </div>
 </div>
 
+<!-- progressbar -->
+<div class="w-full d-flex justify-content-center align-items-center">
+  <ul id="progressbar">
+    <li [ngClass]="formStep >= 1 ? 'active' : ''" id="step1"></li>
+    <li [ngClass]="formStep >= 2 ? 'active' : ''" id="step2"></li>
+    <li [ngClass]="formStep === 3 ? 'active' : ''" id="step3"></li>
+  </ul>
+</div>
+
 <form (ngSubmit)="predict()" #predictionForm="ngForm" class="m-4">
   <div class="col-12 d-flex display-flex flex-wrap justify-content-between">
+
+    <!-- STEP 1 -->
+    <ng-container *ngIf="formStep === 1">
     <div class="form-group col-12 col-md-6 custom-form-padding">
       <label for="cp">*Chest Pain Type (Cp)</label>
       <select class="form-control" id="cp" name="cp" [(ngModel)]="aiPredictionService.predictionRequest.cp" required>
@@ -60,7 +72,10 @@
       <slider [maxValue]=23 [(value)]="aiPredictionService.predictionRequest.fbs" [style.color]="getTextColorSugar()">
       </slider>
     </div>
+    </ng-container>
 
+    <!-- STEP 2 -->
+    <ng-container *ngIf="formStep === 2">
     <div class="form-group col-12 col-md-6 custom-form-padding">
       <label for="restEcg">*Resting Electrocardiographic Results (Rest ECG)</label>
       <select class="form-control" id="restEcg" name="restEcg"
@@ -97,7 +112,10 @@
       <!-- <input type="number" class="form-control" id="oldPeak" name="oldPeak" [(ngModel)]="aiPredictionService.predictionRequest.oldPeak" required> -->
       <slider [(value)]="aiPredictionService.predictionRequest.oldPeak"></slider>
     </div>
+    </ng-container>
 
+    <!-- STEP 3 -->
+    <ng-container *ngIf="formStep === 3">
     <div class="form-group col-12 col-md-6 custom-form-padding">
       <label for="slope">*Slope of the Peak Exercise ST Segment (Slope)</label>
       <!-- <input type="number" class="form-control" id="slope" name="slope" [(ngModel)]="aiPredictionService.predictionRequest.slope" required> -->
@@ -127,15 +145,21 @@
         </option>
       </select>
     </div>
-
+    </ng-container>
   </div>
 
-  <div class="d-flex flex-row gap-1">
-    <button type="submit" class="btn btn-primary" [disabled]="!predictionForm.form.valid">Predict</button>
-    <button type="button" class="btn btn-secondary ml-2" [disabled]="!predictionForm.form.valid"
-      (click)="predictWithOpenAI()">Predict with Open AI</button>
-    <button [disabled]="!appointment" type="button" class="btn btn-primary ml-2" (click)="bookAnAppointment()">Book an
-      Appointment</button>
+  <div class="d-flex flex-row justify-content-center align-items-center mb-4 gap-2">
+    <button class="btn btn-info" type="button" (click)="formStep = formStep - 1" [disabled]="formStep === 1 || predictionMessage">Back</button>
+    <button class="btn btn-info" type="button" (click)="formStep = formStep + 1" [disabled]="formStep === 3">Next</button>
+  </div>
+
+  <div class="d-flex flex-row gap-2">
+    <button type="submit" *ngIf="formStep === 3" class="btn btn-primary" [disabled]="!predictionForm.valid && !predictionMessage">Predict</button>
+    
+    <button *ngIf="formStep === 3 && predictionMessage"
+     [disabled]="!appointment" type="button" class="btn btn-primary ml-2" (click)="bookAnAppointment()">
+      Book an Appointment
+    </button>
   </div>
 
   <div class="loader-container" [class.show-loader]="loading">
@@ -146,6 +170,9 @@
     <div class="custom-message">
       {{ predictionMessage }}
     </div>
+    <button *ngIf="formStep === 3 && predictionMessage" type="button" class="btn btn-secondary ml-2 mt-2" [disabled]="!predictionForm.valid || detailedExplanationGiven"
+      (click)="predictWithOpenAI()">Get a detailed explanation
+    </button>
   </div>
 
 </form>
