--- a/Frontend/src/app/appointment/components/popups/confirmation-modal/confirmation-modal.component.html
+++ b/Frontend/src/app/appointment/components/popups/confirmation-modal/confirmation-modal.component.html
@@ -6,7 +6,7 @@
 <div class="modal-footer">
     <button type="button" class="btn"
         [ngClass]="{'btn-success': confirmationInfo.action==='Cancel', 'btn-danger': confirmationInfo.action==='Approve'}"
-        (click)="modalRefConfirmationModal.close()">No</button>
+        (click)="onNoButtonClick()">No</button>
     <button type="button" class="btn"
         [ngClass]="{'btn-success': confirmationInfo.action==='Approve', 'btn-danger': confirmationInfo.action==='Cancel'}"
         (click)="onYesButtonClick()">Yes</button>
