--- a/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.html
+++ b/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.html
@@ -36,143 +36,132 @@
 
     <!-- STEP 1 -->
     <ng-container *ngIf="formStep === 1">
-    <div class="form-group col-12 col-md-6 custom-form-padding">
-      <label for="cp">*Chest Pain Type (Cp)</label>
-      <select class="form-control" id="cp" name="cp" [(ngModel)]="aiPredictionService.predictionRequest.cp" required>
-        <option *ngFor="let option of this.aiPredictionService.cpOptions" [value]="option.value">{{ option.label }}
-        </option>
-      </select>
-    </div>
-
-    <div class="form-group col-12 col-md-6 custom-form-padding">
-      <div class="d-flex justify-content-between">
-        <label for="trestBps">*Resting Electrocardiographic Results (Rest ECG) </label> <span class="normal-label-text">
-          (Normal: 120/80 mmHg)</span>
+      <div class="form-group col-12 col-md-6 custom-form-padding">
+        <label for="cp">*Chest Pain Type (Cp)</label>
+        <select class="form-control" id="cp" name="cp" [(ngModel)]="aiPredictionService.predictionRequest.cp" required>
+          <option *ngFor="let option of this.aiPredictionService.cpOptions" [value]="option.value">{{ option.label }}
+          </option>
+        </select>
       </div>
-      <select class="form-control" id="trestBps" name="trestBps"
-        [(ngModel)]="aiPredictionService.predictionRequest.trestBps" required>
-        <option *ngFor="let option of this.aiPredictionService.trestBps" [value]="option.value"
-          [ngClass]="getSelectOptionClassPressure(option.value)">{{ option.label }}
-        </option>
-      </select>
-    </div>
 
-    <div class="form-group col-12 col-md-6 custom-form-padding">
-      <div class="d-flex justify-content-between">
-        <label for="chol">*Serum Cholesterol (Chol) </label> <span class="normal-label-text"> (Normal: < 5 mmol /
-            L)</span>
+      <div class="form-group col-12 col-md-6 custom-form-padding">
+        <div class="d-flex justify-content-between">
+          <label for="trestBps">*Resting Electrocardiographic Results (Rest ECG) </label> <span
+            class="normal-label-text">
+            (Normal: 120/80 mmHg)</span>
+        </div>
+        <select class="form-control" id="trestBps" name="trestBps"
+          [(ngModel)]="aiPredictionService.predictionRequest.trestBps" required>
+          <option *ngFor="let option of this.aiPredictionService.trestBps" [value]="option.value"
+            [ngClass]="getSelectOptionClassPressure(option.value)">{{ option.label }}
+          </option>
+        </select>
       </div>
-      <slider [(value)]="aiPredictionService.predictionRequest.chol" [style.color]="getTextColor()"></slider>
-    </div>
 
-    <div class="form-group col-12 col-md-6 custom-form-padding">
-      <div class="d-flex justify-content-between">
-        <label>*Fasting Blood Sugar (Fbs) </label> <span class="normal-label-text"> (Normal: 3 - 6 mmol / L)</span>
+      <div class="form-group col-12 col-md-6 custom-form-padding">
+        <div class="d-flex justify-content-between">
+          <label for="chol">*Serum Cholesterol (Chol) </label> <span class="normal-label-text"> (Normal: < 5 mmol /
+              L)</span>
+        </div>
+        <slider [(value)]="aiPredictionService.predictionRequest.chol" [style.color]="getTextColor()"></slider>
       </div>
-      <slider [maxValue]=23 [(value)]="aiPredictionService.predictionRequest.fbs" [style.color]="getTextColorSugar()">
-      </slider>
-    </div>
+
+      <div class="form-group col-12 col-md-6 custom-form-padding">
+        <div class="d-flex justify-content-between">
+          <label>*Fasting Blood Sugar (Fbs) </label> <span class="normal-label-text"> (Normal: 3 - 6 mmol / L)</span>
+        </div>
+        <slider [maxValue]=23 [(value)]="aiPredictionService.predictionRequest.fbs" [style.color]="getTextColorSugar()">
+        </slider>
+      </div>
     </ng-container>
 
     <!-- STEP 2 -->
     <ng-container *ngIf="formStep === 2">
-    <div class="form-group col-12 col-md-6 custom-form-padding">
-      <label for="restEcg">*Resting Electrocardiographic Results (Rest ECG)</label>
-      <select class="form-control" id="restEcg" name="restEcg"
-        [(ngModel)]="aiPredictionService.predictionRequest.restEcg" required>
-        <option *ngFor="let option of this.aiPredictionService.restEcgOptions" [value]="option.value"
-          [ngClass]="getSelectOptionClass(option.value)">{{ option.label }}
-        </option>
-      </select>
-    </div>
-    <div class="form-group col-12 col-md-6 custom-form-padding">
-      <div class="d-flex justify-content-between">
-        <label for="thalach">*Maximum Heart Rate Achieved (Thalach) </label> <span class="normal-label-text"> (Normal:
-          60-100 beats per minute)</span>
+      <div class="form-group col-12 col-md-6 custom-form-padding">
+        <label for="restEcg">*Resting Electrocardiographic Results (Rest ECG)</label>
+        <select class="form-control" id="restEcg" name="restEcg"
+          [(ngModel)]="aiPredictionService.predictionRequest.restEcg" required>
+          <option *ngFor="let option of this.aiPredictionService.restEcgOptions" [value]="option.value"
+            [ngClass]="getSelectOptionClass(option.value)">{{ option.label }}
+          </option>
+        </select>
       </div>
-      <select class="form-control" id="thalach" name="thalach"
-        [(ngModel)]="aiPredictionService.predictionRequest.thalach" required>
-        <option *ngFor="let option of this.aiPredictionService.thalachOptions" [value]="option.value"
-          [ngClass]="getSelectOptionClassHeartRate(option.value)">{{ option.label }}
-        </option>
-      </select>
-    </div>
-
-    <div class="form-group col-12 col-md-6 custom-form-padding">
-      <label for="exang">Exercise Induced Angina (Exang)</label>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="exang" name="exang"
-          [checked]="aiPredictionService.predictionRequest.exang" (change)="updateExangValue($event)" required>
-        <label class="form-check-label" for="exang">Exang</label>
+      <div class="form-group col-12 col-md-6 custom-form-padding">
+        <div class="d-flex justify-content-between">
+          <label for="thalach">*Maximum Heart Rate Achieved (Thalach) </label> <span class="normal-label-text"> (Normal:
+            60-100 beats per minute)</span>
+        </div>
+        <select class="form-control" id="thalach" name="thalach"
+          [(ngModel)]="aiPredictionService.predictionRequest.thalach" required>
+          <option *ngFor="let option of this.aiPredictionService.thalachOptions" [value]="option.value"
+            [ngClass]="getSelectOptionClassHeartRate(option.value)">{{ option.label }}
+          </option>
+        </select>
       </div>
-    </div>
 
-    <div class="form-group col-12 col-md-6 custom-form-padding">
-      <label for="oldPeak">*ST Depression Induced by Exercise Relative to Rest (Old Peak)</label>
-      <!-- <input type="number" class="form-control" id="oldPeak" name="oldPeak" [(ngModel)]="aiPredictionService.predictionRequest.oldPeak" required> -->
-      <slider [(value)]="aiPredictionService.predictionRequest.oldPeak"></slider>
-    </div>
+      <div class="form-group col-12 col-md-6 custom-form-padding">
+        <label for="exang">Exercise Induced Angina (Exang)</label>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="exang" name="exang"
+            [checked]="aiPredictionService.predictionRequest.exang" (change)="updateExangValue($event)" required>
+          <label class="form-check-label" for="exang">Exang</label>
+        </div>
+      </div>
+
+      <div class="form-group col-12 col-md-6 custom-form-padding">
+        <label for="oldPeak">*ST Depression Induced by Exercise Relative to Rest (Old Peak)</label>
+        <!-- <input type="number" class="form-control" id="oldPeak" name="oldPeak" [(ngModel)]="aiPredictionService.predictionRequest.oldPeak" required> -->
+        <slider [(value)]="aiPredictionService.predictionRequest.oldPeak"></slider>
+      </div>
     </ng-container>
 
     <!-- STEP 3 -->
     <ng-container *ngIf="formStep === 3">
-    <div class="form-group col-12 col-md-6 custom-form-padding">
-      <label for="slope">*Slope of the Peak Exercise ST Segment (Slope)</label>
-      <!-- <input type="number" class="form-control" id="slope" name="slope" [(ngModel)]="aiPredictionService.predictionRequest.slope" required> -->
-      <slider [(value)]="aiPredictionService.predictionRequest.slope"></slider>
+      <div class="form-group col-12 col-md-6 custom-form-padding">
+        <label for="slope">*Slope of the Peak Exercise ST Segment (Slope)</label>
+        <!-- <input type="number" class="form-control" id="slope" name="slope" [(ngModel)]="aiPredictionService.predictionRequest.slope" required> -->
+        <slider [(value)]="aiPredictionService.predictionRequest.slope"></slider>
 
-    </div>
-
-    <div class="form-group col-12 col-md-6 custom-form-padding">
-      <div class="d-flex justify-content-between">
-        <label>*Number of Major Vessels Colored by Fluoroscopy (Ca) </label> <span class="normal-label-text"> (Normal:
-          0)</span>
       </div>
-      <!-- <input type="number" class="form-control" id="ca" name="ca" [(ngModel)]="aiPredictionService.predictionRequest.ca" required> -->
-      <slider [maxValue]=3 [minValue]=0 [(value)]="aiPredictionService.predictionRequest.ca"
-        [style.color]="getTextColorCa()"></slider>
 
-    </div>
+      <div class="form-group col-12 col-md-6 custom-form-padding">
+        <div class="d-flex justify-content-between">
+          <label>*Number of Major Vessels Colored by Fluoroscopy (Ca) </label> <span class="normal-label-text"> (Normal:
+            0)</span>
+        </div>
+        <!-- <input type="number" class="form-control" id="ca" name="ca" [(ngModel)]="aiPredictionService.predictionRequest.ca" required> -->
+        <slider [maxValue]=3 [minValue]=0 [(value)]="aiPredictionService.predictionRequest.ca"
+          [style.color]="getTextColorCa()"></slider>
 
-    <div class="form-group col-12 col-md-6 custom-form-padding">
-      <div class="d-flex justify-content-between">
-        <label for="thalach">*Thalassemia (Thal) </label> <span class="normal-label-text"> (Normal: No)</span>
       </div>
-      <select class="form-control" id="thalach" name="thalach" [(ngModel)]="aiPredictionService.predictionRequest.thal"
-        required>
-        <option *ngFor="let option of this.aiPredictionService.thal" [value]="option.value"
-          [ngClass]="getSelectOptionThal(option.value)">{{ option.label }}
-        </option>
-      </select>
-    </div>
+
+      <div class="form-group col-12 col-md-6 custom-form-padding">
+        <div class="d-flex justify-content-between">
+          <label for="thalach">*Thalassemia (Thal) </label> <span class="normal-label-text"> (Normal: No)</span>
+        </div>
+        <select class="form-control" id="thalach" name="thalach"
+          [(ngModel)]="aiPredictionService.predictionRequest.thal" required>
+          <option *ngFor="let option of this.aiPredictionService.thal" [value]="option.value"
+            [ngClass]="getSelectOptionThal(option.value)">{{ option.label }}
+          </option>
+        </select>
+      </div>
     </ng-container>
   </div>
 
   <div class="d-flex flex-row justify-content-center align-items-center mb-4 gap-2">
-    <button class="btn btn-info" type="button" (click)="formStep = formStep - 1" [disabled]="formStep === 1 || predictionMessage">Back</button>
-    <button class="btn btn-info" type="button" (click)="formStep = formStep + 1" [disabled]="formStep === 3">Next</button>
+    <button class="btn btn-info" type="button" (click)="formStep = formStep - 1"
+      [disabled]="formStep === 1">Back</button>
+    <button class="btn btn-info" type="button" (click)="formStep = formStep + 1"
+      [disabled]="formStep === 3">Next</button>
   </div>
 
-  <div class="d-flex flex-row gap-2">
-    <button type="submit" *ngIf="formStep === 3" class="btn btn-primary" [disabled]="!predictionForm.valid && !predictionMessage">Predict</button>
-    
-    <button *ngIf="formStep === 3 && predictionMessage"
-     [disabled]="!appointment" type="button" class="btn btn-primary ml-2" (click)="bookAnAppointment()">
-      Book an Appointment
-    </button>
+  <div class="d-flex justify-content-center align-items-center flex-row gap-2">
+    <button type="submit" *ngIf="formStep === 3" class="btn btn-info"
+      [disabled]="!predictionForm.valid && !predictionMessage">Predict</button>
   </div>
 
   <div class="loader-container" [class.show-loader]="loading">
     <div class="loader"></div>
   </div>
-
-  <div class="custom-message-block mt-3" [class.show-message]="predictionMessage">
-    <div class="custom-message">
-      {{ predictionMessage }}
-    </div>
-    <button *ngIf="formStep === 3 && predictionMessage" type="button" class="btn btn-secondary ml-2 mt-2" [disabled]="!predictionForm.valid || detailedExplanationGiven"
-      (click)="predictWithOpenAI()">Get a detailed explanation
-    </button>
-  </div>
-
 </form>
