--- a/Frontend/src/app/.shared/slider/slider.component.html
+++ b/Frontend/src/app/.shared/slider/slider.component.html
@@ -1,3 +1,3 @@
 <input type="range" [min]="minValue" [max]="maxValue" class="slider" [value]="value"
     (change)="setValue($event)">
-<p>Value: <span>{{value}}</span></p>
+<p class="slider-value">Value: <span>{{value}}</span></p>
