--- a/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.html
+++ b/Frontend/src/app/home-doctor/ai-prediction/ai-prediction.component.html
@@ -23,145 +23,139 @@
 </div>
 
 <!-- progressbar -->
-<div class="w-full d-flex justify-content-center align-items-center">
+<!-- <div class="w-full d-flex justify-content-center align-items-center">
   <ul id="progressbar">
     <li [ngClass]="formStep >= 1 ? 'active' : ''" id="step1"></li>
     <li [ngClass]="formStep >= 2 ? 'active' : ''" id="step2"></li>
     <li [ngClass]="formStep === 3 ? 'active' : ''" id="step3"></li>
   </ul>
-</div>
+</div> -->
 
-<form (ngSubmit)="predict()" #predictionForm="ngForm" class="m-4">
-  <div class="col-12 d-flex display-flex flex-wrap justify-content-between">
+<form (ngSubmit)="predict()" #predictionForm="ngForm" class="m-4 form-predict">
+  <div class="d-flex flex-wrap">
 
-    <!-- STEP 1 -->
-    <ng-container *ngIf="formStep === 1">
-      <div class="form-group col-12 col-md-6 custom-form-padding">
+    <div class="col-12 col-md-6 col-lg-4 d-flex display-flex flex-wrap justify-content-between">
+      <div class="form-group col-12 col-lg-11 custom-form-padding">
         <label for="cp">*Chest Pain Type (Cp)</label>
         <select class="form-control" id="cp" name="cp" [(ngModel)]="aiPredictionService.predictionRequest.cp" required>
+
           <option *ngFor="let option of this.aiPredictionService.cpOptions" [value]="option.value">{{ option.label }}
           </option>
         </select>
       </div>
-
-      <div class="form-group col-12 col-md-6 custom-form-padding">
-        <div class="d-flex justify-content-between">
-          <label for="trestBps">*Resting Electrocardiographic Results (Rest ECG) </label> <span
-            class="normal-label-text">
-            (Normal: 120/80 mmHg)</span>
-        </div>
-        <select class="form-control" id="trestBps" name="trestBps"
-          [(ngModel)]="aiPredictionService.predictionRequest.trestBps" required>
-          <option *ngFor="let option of this.aiPredictionService.trestBps" [value]="option.value"
-            [ngClass]="getSelectOptionClassPressure(option.value)">{{ option.label }}
-          </option>
-        </select>
-      </div>
-
-      <div class="form-group col-12 col-md-6 custom-form-padding">
-        <div class="d-flex justify-content-between">
-          <label for="chol">*Serum Cholesterol (Chol) </label> <span class="normal-label-text"> (Normal: < 5 mmol /
-              L)</span>
-        </div>
-        <slider [(value)]="aiPredictionService.predictionRequest.chol" [style.color]="getTextColor()"></slider>
-      </div>
-
-      <div class="form-group col-12 col-md-6 custom-form-padding">
+      <div class="form-group col-12 col-lg-11 custom-form-padding">
         <div class="d-flex justify-content-between">
           <label>*Fasting Blood Sugar (Fbs) </label> <span class="normal-label-text"> (Normal: 3 - 6 mmol / L)</span>
         </div>
-        <slider [maxValue]=23 [(value)]="aiPredictionService.predictionRequest.fbs" [style.color]="getTextColorSugar()">
-        </slider>
+        <slider class="slider-component" [maxValue]=23 [(value)]="aiPredictionService.predictionRequest.fbs" [style.color]="getTextColorSugar()"></slider>
       </div>
-    </ng-container>
-
-    <!-- STEP 2 -->
-    <ng-container *ngIf="formStep === 2">
-      <div class="form-group col-12 col-md-6 custom-form-padding">
-        <label for="restEcg">*Resting Electrocardiographic Results (Rest ECG)</label>
-        <select class="form-control" id="restEcg" name="restEcg"
-          [(ngModel)]="aiPredictionService.predictionRequest.restEcg" required>
-          <option *ngFor="let option of this.aiPredictionService.restEcgOptions" [value]="option.value"
-            [ngClass]="getSelectOptionClass(option.value)">{{ option.label }}
-          </option>
-        </select>
-      </div>
-      <div class="form-group col-12 col-md-6 custom-form-padding">
-        <div class="d-flex justify-content-between">
-          <label for="thalach">*Maximum Heart Rate Achieved (Thalach) </label> <span class="normal-label-text"> (Normal:
-            60-100 beats per minute)</span>
-        </div>
-        <select class="form-control" id="thalach" name="thalach"
-          [(ngModel)]="aiPredictionService.predictionRequest.thalach" required>
-          <option *ngFor="let option of this.aiPredictionService.thalachOptions" [value]="option.value"
-            [ngClass]="getSelectOptionClassHeartRate(option.value)">{{ option.label }}
-          </option>
-        </select>
-      </div>
-
-      <div class="form-group col-12 col-md-6 custom-form-padding">
+      <div class="form-group col-12 col-lg-11 custom-form-padding">
         <label for="exang">Exercise Induced Angina (Exang)</label>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="exang" name="exang"
-            [checked]="aiPredictionService.predictionRequest.exang" (change)="updateExangValue($event)" required>
+          <input class="form-check-input" type="checkbox" id="exang" name="exang" [checked]="aiPredictionService.predictionRequest.exang"
+            (change)="updateExangValue($event)" required>
           <label class="form-check-label" for="exang">Exang</label>
         </div>
       </div>
-
-      <div class="form-group col-12 col-md-6 custom-form-padding">
-        <label for="oldPeak">*ST Depression Induced by Exercise Relative to Rest (Old Peak)</label>
-        <!-- <input type="number" class="form-control" id="oldPeak" name="oldPeak" [(ngModel)]="aiPredictionService.predictionRequest.oldPeak" required> -->
-        <slider [(value)]="aiPredictionService.predictionRequest.oldPeak"></slider>
-      </div>
-    </ng-container>
-
-    <!-- STEP 3 -->
-    <ng-container *ngIf="formStep === 3">
-      <div class="form-group col-12 col-md-6 custom-form-padding">
-        <label for="slope">*Slope of the Peak Exercise ST Segment (Slope)</label>
-        <!-- <input type="number" class="form-control" id="slope" name="slope" [(ngModel)]="aiPredictionService.predictionRequest.slope" required> -->
-        <slider [(value)]="aiPredictionService.predictionRequest.slope"></slider>
-
-      </div>
-
-      <div class="form-group col-12 col-md-6 custom-form-padding">
+      <div class="form-group col-12 col-lg-11 custom-form-padding">
         <div class="d-flex justify-content-between">
-          <label>*Number of Major Vessels Colored by Fluoroscopy (Ca) </label> <span class="normal-label-text"> (Normal:
-            0)</span>
+          <label>*Number of Major Vessels Colored by Fluoroscopy (Ca) </label> <span class="normal-label-text"> (Normal: 0)</span>
         </div>
         <!-- <input type="number" class="form-control" id="ca" name="ca" [(ngModel)]="aiPredictionService.predictionRequest.ca" required> -->
-        <slider [maxValue]=3 [minValue]=0 [(value)]="aiPredictionService.predictionRequest.ca"
-          [style.color]="getTextColorCa()"></slider>
+        <slider class="slider-component" [maxValue]=3 [minValue]=0 [(value)]="aiPredictionService.predictionRequest.ca" [style.color]="getTextColorCa()"></slider>
 
       </div>
-
-      <div class="form-group col-12 col-md-6 custom-form-padding">
+    </div>
+    <div class="col-12 col-md-6 col-lg-4 d-flex display-flex flex-wrap justify-content-between">
+      <div class="form-group col-12 col-lg-11 custom-form-padding">
         <div class="d-flex justify-content-between">
-          <label for="thalach">*Thalassemia (Thal) </label> <span class="normal-label-text"> (Normal: No)</span>
+          <label for="trestBps">*Resting Blood Pressure (High/Low)  </label> <span class="normal-label-text"> (Normal: 120/80 mmHg)</span>
         </div>
-        <select class="form-control" id="thalach" name="thalach"
-          [(ngModel)]="aiPredictionService.predictionRequest.thal" required>
-          <option *ngFor="let option of this.aiPredictionService.thal" [value]="option.value"
-            [ngClass]="getSelectOptionThal(option.value)">{{ option.label }}
+<!--         <select class="form-control" id="trestBps" name="trestBps" [(ngModel)]="aiPredictionService.predictionRequest.trestBps" required>
+          <option *ngFor="let option of this.aiPredictionService.trestBps" [value]="option.value" [ngClass]="getSelectOptionClassPressure(option.value)">{{ option.label }}
+          </option>
+        </select> -->
+
+        <div class="d-flex flex-wrap justify-content-between">
+        <div class="col-12 col-md-5">
+          <input class="form-control" type="number" id="high" name="high" [(ngModel)]="aiPredictionService.predictionRequest.trestBps"
+          (change)="updateBloodValue($event)" required>
+        </div>
+
+        <div class="col-12 col-md-5">
+          <input class="form-control" type="number" id="low" name="low" (change)="updateBloodValueLow($event)" required [(ngModel)]="this.trestBpsLow">
+        </div>
+        </div>
+
+      </div>
+      <div class="form-group col-12 col-lg-11 custom-form-padding">
+        <label for="restEcg">*Resting Electrocardiographic Results (Rest ECG)</label>
+
+        <select class="form-control" id="restEcg" name="restEcg" [(ngModel)]="aiPredictionService.predictionRequest.restEcg" required>
+
+          <option *ngFor="let option of this.aiPredictionService.restEcgOptions" [value]="option.value" [ngClass]="getSelectOptionClass(option.value)">{{ option.label }}
           </option>
         </select>
       </div>
-    </ng-container>
+
+      <div class="form-group col-12 col-lg-11 custom-form-padding">
+        <label for="oldPeak">*ST Depression Induced by Exercise Relative to Rest (Old Peak)</label>
+        <!-- <input type="number" class="form-control" id="oldPeak" name="oldPeak" [(ngModel)]="aiPredictionService.predictionRequest.oldPeak" required> -->
+        <slider class="slider-component" [(value)]="aiPredictionService.predictionRequest.oldPeak"></slider>
+      </div>
+      <div class="form-group col-12 col-lg-11 custom-form-padding">
+        <div class="d-flex justify-content-between">
+          <label for="thalach">*Thalassemia (Thal) </label> <span class="normal-label-text"> (Normal: No)</span>
+        </div>
+        <select class="form-control" id="thalach" name="thalach" [(ngModel)]="aiPredictionService.predictionRequest.thal" required>
+
+          <option *ngFor="let option of this.aiPredictionService.thal" [value]="option.value" [ngClass]="getSelectOptionThal(option.value)">{{ option.label }}
+          </option>
+        </select>
+      </div>
+    </div>
+  
+  
+      <div class="col-12 col-md-6 col-lg-4 d-flex display-flex height-max-content flex-wrap justify-content-between">
+  
+        <div class="form-group col-12 col-lg-11 custom-form-padding">
+          <div class="d-flex justify-content-between">
+            <label for="chol">*Serum Cholesterol (Chol) </label> <span class="normal-label-text"> (Normal: < 5 mmol / L)</span>
+          </div>
+          <slider class="slider-component" [maxValue]="300" [(value)]="aiPredictionService.predictionRequest.chol" [style.color]="getTextColor()"></slider>
+        </div>
+        <div class="form-group col-12 col-lg-11 custom-form-padding">
+          <div class="d-flex justify-content-between">
+            <label for="thalach">*Maximum Heart Rate Achieved (Thalach) </label> <span class="normal-label-text"> (Normal: 60-100 bpm)</span>
+          </div>
+
+          <slider [maxValue]=200 class="slider-component" [style.color]="getThalacColor()" [(value)]="aiPredictionService.predictionRequest.thalach"></slider>
+
+        </div>
+      
+        <div class="form-group col-12 col-lg-11 custom-form-padding">
+          <label for="slope">*Slope of the Peak Exercise ST Segment (Slope)</label>
+          <!-- <input type="number" class="form-control" id="slope" name="slope" [(ngModel)]="aiPredictionService.predictionRequest.slope" required> -->
+          <slider class="slider-component" [(value)]="aiPredictionService.predictionRequest.slope"></slider>
+
+        </div>
+
+    </div>
   </div>
 
-  <div class="d-flex flex-row justify-content-center align-items-center mb-4 gap-2">
-    <button class="btn btn-info" type="button" (click)="formStep = formStep - 1"
-      [disabled]="formStep === 1">Back</button>
-    <button class="btn btn-info" type="button" (click)="formStep = formStep + 1"
-      [disabled]="formStep === 3">Next</button>
-  </div>
-
-  <div class="d-flex justify-content-center align-items-center flex-row gap-2">
-    <button type="submit" *ngIf="formStep === 3" class="btn btn-info"
-      [disabled]="!predictionForm.valid && !predictionMessage">Predict</button>
+  <div class="d-flex flex-row gap-1">
+    <button type="submit" class="btn btn-primary" [disabled]="!predictionForm.form.valid">Predict</button>
+    <button data-bs-toggle="modal" data-bs-target="#book-an-appointment" [disabled]="!appointment" type="button" class="btn btn-primary ml-2">Book an Appointment</button>
   </div>
 
   <div class="loader-container" [class.show-loader]="loading">
     <div class="loader"></div>
   </div>
+
+<!--   <div class="custom-message-block mt-3" [class.show-message]="predictionMessage">
+    <div class="custom-message">
+      {{ predictionMessage }}
+    </div>
+  </div> -->
+
 </form>
