--- a/Frontend/src/app/home-doctor/ai-prediction/popups/results-popup/results-popup.component.html
+++ b/Frontend/src/app/home-doctor/ai-prediction/popups/results-popup/results-popup.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <h5 class="modal-title" id="exampleModalLabel">Prediction Results</h5>
-    <button type="button" class="btn-close" aria-label="Close" (click)="modalRefResults.close()"></button>
+    <button type="button" class="btn-close" aria-label="Close" (click)="closeModalAndClearForm()"></button>
 </div>
 <div class="modal-body">
     <div class="justify-content-center align-items-center" [class.show-message]="predictionMessage">
