--- a/Frontend/src/app/appointment/components/new-appointment/new-appointment.component.html
+++ b/Frontend/src/app/appointment/components/new-appointment/new-appointment.component.html
@@ -5,40 +5,49 @@
 </div>
 <div class="modal-body">
     <form class="form-material form-horizontal">
-        <div class="form-group col-md-12 d-flex">
-            <i class="far fa-edit m-r-10 align-self-center"></i>
-            <input type="text" id="title" name="title" class="form-control" placeholder="Add title"
-                [(ngModel)]="appointmentInfo.title" required>
-
-            <label class="col-md-1 align-self-center">Patient:</label>
-            <div class="col-md-2">
-                <input type="text" id="patientName" name="patientName" class="form-control "
-                    [(ngModel)]="appointmentInfo.patientName" disabled>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group d-flex">
+                    <i class="far fa-edit m-r-10 align-self-center"></i>
+                    <input type="text" id="title" name="title" class="form-control" placeholder="Add title"
+                        [(ngModel)]="appointmentInfo.title" required>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group d-flex">
+                    <label class="align-self-center m-r-10">Patient:</label>
+                    <input type="text" id="patientName" name="patientName" class="form-control"
+                        [(ngModel)]="appointmentInfo.patientName" disabled>
+                </div>
             </div>
         </div>
-        <div class="form-group col-md-12 d-flex">
-
-            <i class="far fa-clock m-r-10 align-self-center"></i>
-
-            <input class="form-control align-self-center" name="startDateModel" placeholder="Start date"
-                [(ngModel)]="startDateModel" ngbDatepicker #dpstart="ngbDatepicker" />
-            <button class="btn btn-outline-secondary align-self-center" (click)="dpstart.toggle()" type="button"><i
-                    class="far fa-calendar"></i></button>
-            <ngb-timepicker [(ngModel)]="startTime" name="startTime" [meridian]="true"></ngb-timepicker>
-
-            <input class="form-control align-self-center" name="endDateModel" placeholder="End date"
-                [(ngModel)]="endDateModel" ngbDatepicker #dpend="ngbDatepicker" style="margin-left: 10px" />
-            <button class="btn btn-outline-secondary align-self-center" (click)="dpend.toggle()" type="button"><i
-                    class="far fa-calendar"></i></button>
-            <ngb-timepicker [(ngModel)]="endTime" name="endTime" [meridian]="true"></ngb-timepicker>
-
+        <div class="row">
+            <div class="form-group d-flex" style="margin-bottom: 10px">
+                <i class="far fa-clock m-r-10 align-self-center"></i>
+                <input class="form-control align-self-center" name="startDateModel" placeholder="Start date"
+                    [(ngModel)]="startDateModel" ngbDatepicker #dpstart="ngbDatepicker" />
+                <button class="btn btn-outline-secondary align-self-center" (click)="dpstart.toggle()" type="button"><i
+                        class="far fa-calendar"></i></button>
+                <ngb-timepicker [(ngModel)]="startTime" name="startTime" [meridian]="true"></ngb-timepicker>
+            </div>
         </div>
-
-        <div class="form-group">
-            <label class="col-md-12">Description</label>
-            <div class="col-md-12">
-                <textarea class="form-control" name="description" rows="3"
-                    [(ngModel)]="appointmentInfo.description"></textarea>
+        <div class="row">
+            <div class="form-group d-flex" style="margin-bottom: 10px">
+                <i class="far fa-clock m-r-10 align-self-center"></i>
+                <input class="form-control align-self-center" name="endDateModel" placeholder="End date"
+                    [(ngModel)]="endDateModel" ngbDatepicker #dpend="ngbDatepicker" style="margin-left: 10px" />
+                <button class="btn btn-outline-secondary align-self-center" (click)="dpend.toggle()" type="button"><i
+                        class="far fa-calendar"></i></button>
+                <ngb-timepicker [(ngModel)]="endTime" name="endTime" [meridian]="true"></ngb-timepicker>
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-group" style="margin-bottom: 10px">
+                <label class="col-md-12">Description</label>
+                <div class="col-md-12">
+                    <textarea class="form-control" name="description" rows="3"
+                        [(ngModel)]="appointmentInfo.description"></textarea>
+                </div>
             </div>
         </div>
     </form>
