--- a/Frontend/src/app/archive/archive.component.html
+++ b/Frontend/src/app/archive/archive.component.html
@@ -22,6 +22,6 @@
 
 <div class="content">
     <ag-grid-angular [class]="themeClass" [rowData]="predictionResults" [columnDefs]="colDefs" domLayout='autoHeight'
-        [defaultColDef]="defaultColDef" [pagination]="true" [columnHoverHighlight]="true">
+        [defaultColDef]="defaultColDef" [pagination]="true" [columnHoverHighlight]="true" [gridOptions]="gridOptions">
     </ag-grid-angular>
 </div>
