--- a/Frontend/src/app/home-doctor/ai-prediction/popups/results-popup/results-popup.component.html
+++ b/Frontend/src/app/home-doctor/ai-prediction/popups/results-popup/results-popup.component.html
@@ -11,8 +11,7 @@
 </div>
 <div class="modal-footer">
     <div class="d-flex justify-content-center align-items-center flex-row gap-2">
-        <button type="button" class="btn btn-secondary" (click)="predictWithOpenAI()">Get a detailed
-            explanation
+        <button type="button" class="btn btn-secondary" (click)="predictWithOpenAI()">Get an explanation
         </button>
         <button type="button" class="btn btn-primary ml-2" (click)="bookAnAppointment()">
             Book an Appointment
