--- a/Frontend/src/app/dashboards/house-doctor-dashboard/house-doctor-dashboard.component.html
+++ b/Frontend/src/app/dashboards/house-doctor-dashboard/house-doctor-dashboard.component.html
@@ -46,8 +46,8 @@
     <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Approved and pending appointments per month</h5>
-                <canvas id="canvas-appointment-status-per-month"></canvas>
+                <h5 class="card-title">Top 10 most critical patients by probability percentages</h5>
+                <canvas id="canvas-urgent-patients"></canvas>
             </div>
         </div>
     </div>
